interface/ogre_interface.h


// COI_DECLARE_HANDLE(CameraHandle);
// COI_DECLARE_HANDLE(EntityHandle);
// COI_DECLARE_HANDLE(SceneNodeHandle);
// COI_DECLARE_HANDLE(LightHandle);
// COI_DECLARE_HANDLE(RenderWindowHandle);
// COI_DECLARE_HANDLE(RootHandle);
// COI_DECLARE_HANDLE(RenderSystemHandle);
// COI_DECLARE_HANDLE(SceneManagerHandle);
// COI_DECLARE_HANDLE(ViewportHandle);

#define CameraHandle void*
#define RenderWindowHandle void*
#define ViewportHandle void*
#define LogHandle void*
#define LogListenerHandle void*
#define NameValuePairListHandle void*


typedef struct
{
    float x;
    float y;
    float z;
} coiVector3;



typedef enum
{
    LL_LOW = 1,
    LL_NORMAL = 2,
    LL_BOREME = 3
} logging_level;


typedef enum
{
    LML_TRIVIAL = 1,
    LML_NORMAL = 2,
    LML_CRITICAL = 3
} log_message_level;





typedef void(*LogListenerEvent)(const char* message, log_message_level lml, int maskDebug, const char* log_name, int skip_message);


// Same as LogListenerEvent but allows the client to
// send additional data via a void pointer. We assume the
// client knows what they're doing if they use this. (:
typedef void(*LogListenerCtx)(const char* message, log_message_level lml, int maskDebug, const char* log_name, int skip_message, void* userdata);


DLL void log_message(const char* message);


//LogManager::setDefaultLog
DLL LogHandle logmanager_set_default_log(LogHandle log_handle);


//LogManager::createLog
DLL LogHandle logmanager_create_log(const char* name, int default_log, int debugger_output, int suppress_file_output);


// n.b., Allows for finer grained control over the log messages at the cost of
// having to supply all these variables. If you don't need this control,
// use log_message above.
//LogManager::logMessage
DLL void logmanager_log_message(const char* message, log_message_level lml, int maskDebug, const char* log_name, int skip_message);


//LogManager::setLogDetail
DLL void logmanager_set_log_detail(logging_level lvl);


//LogManager::destroyLog
DLL void logmanager_destroy_log(const char* name);


//LogManager::destroyLog
DLL void logmanager_destroy_log_by_handle(LogHandle log_handle);


//Log::addListener
DLL LogListenerHandle add_log_listener(LogListenerEvent log_event, LogHandle log_handle);


//Log::addListener
DLL LogListenerHandle add_log_listener_ctx(LogListenerCtx log_event, LogHandle log_handle, void* userdata);


//Log::removeListener
DLL void remove_log_listener(LogListenerHandle handle, LogHandle log_handle);


//Log::addListener
DLL void remove_log_listener_ctx(LogListenerHandle handle, LogHandle log_handle);



// NameValuePairList 
DLL NameValuePairListHandle create_name_value_pair_list();

DLL void add_pair(NameValuePairListHandle params, const char* name, const char* value);

DLL void destroy_name_value_pair_list(NameValuePairListHandle params);



// RenderWindow
DLL ViewportHandle render_window_add_viewport(RenderWindowHandle window_handle, CameraHandle camera_handle, int zorder, float left, float top, float width, float height);


DLL int render_window_is_closed(RenderWindowHandle handle);



// Vector3
// TODO: Probably change these to pass pointers to coiV3 rather than passing the 
// structs on the stack, as shown above with ColourValue. 
//Vector3::operator !=
DLL int vector3_notequals_vector3(coiVector3 lhs, coiVector3 rhs);


//Vector3::operator ==
DLL int vector3_equals_vector3(coiVector3 lhs, coiVector3 rhs);


//Vector3::operator +
DLL coiVector3 vector3_add_vector3(coiVector3 lhs, coiVector3 rhs);


//Vector3::operator +=
DLL void vector3_update_add_vector3(coiVector3 lhs, coiVector3 rhs);


//Vector3::operator -
DLL coiVector3 vector3_subtract_vector3(coiVector3 lhs, coiVector3 rhs);


//Vector3::operator -=
DLL void vector3_update_subtract_vector3(coiVector3 lhs, coiVector3 rhs);


//Vector3::operator - 
DLL coiVector3 vector3_negate(coiVector3 v3);


// Vector3::operator/ 
DLL coiVector3 vector3_divide_vector3(coiVector3 lhs, coiVector3 rhs);


// Vector3::operator*
DLL coiVector3 vector3_multiply_vector3(coiVector3 lhs, coiVector3 rhs);



// Vector3::isNaN
DLL int vector3_is_nan(coiVector3 v3);


//Vector3::primaryAxis
DLL coiVector3 vector3_primary_axis(coiVector3);


// Vector3::ZERO
DLL coiVector3 vector3_ZERO();


// Vector3::UNIT_X
DLL coiVector3 vector3_UNIT_X();


// Vector3::UNIT_Y
DLL coiVector3 vector3_UNIT_Y();


// Vector3::UNIT_Z
DLL coiVector3 vector3_UNIT_Z();


// Vector3::NEGATIVE_UNIT_X
DLL coiVector3 vector3_NEGATIVE_UNIT_X();


// Vector3::NEGATIVE_UNIT_Y
DLL coiVector3 vector3_NEGATIVE_UNIT_Y();


// Vector3::NEGATIVE_UNIT_Z
DLL coiVector3 vector3_NEGATIVE_UNIT_Z();


// Vector3::UNIT_SCALE
DLL coiVector3 vector3_UNIT_SCALE();