contrib/d2/import/llcoi/ogre_interface.di


//LogManager::setDefaultLog
LogHandle logmanager_set_default_log(LogHandle log_handle);

//LogManager::createLog
LogHandle logmanager_create_log(const char* name, int default_log, int debugger_output, int suppress_file_output);

// n.b., Allows for finer grained control over the log messages at the cost of
// having to supply all these variables. If you don't need this control,
// use log_message above.
//LogManager::logMessage
void logmanager_log_message(const char* message, LogMessageLevel lml, int maskDebug, const char* log_name, int skip_message);

//LogManager::setLogDetail
void logmanager_set_log_detail(LoggingLevel lvl);

//LogManager::destroyLog
void logmanager_destroy_log(const char* name);

//LogManager::destroyLog overload
void logmanager_destroy_log_by_handle(LogHandle log_handle);

//Log::addListener
LogListenerHandle add_log_listener(LogListenerEvent log_event, LogHandle log_handle);

//Log::addListener
LogListenerHandle add_log_listener_ctx(LogListenerCtx log_event, LogHandle log_handle, void* userdata);

//Log::removeListener
void remove_log_listener(LogListenerHandle llh, LogHandle log_handle);

//Log::removeListener
void remove_log_listener_ctx(LogListenerHandle llh, LogHandle log_handle);


// NameValuePairList 
NameValuePairListHandle create_name_value_pair_list();
void add_pair(NameValuePairListHandle params, const char* name, const char* value);
void destroy_name_value_pair_list(NameValuePairListHandle params);

// RenderWindow
ViewportHandle render_window_add_viewport(RenderWindowHandle window_handle, CameraHandle camera_handle, int zorder, float left, float top, float width, float height);
int render_window_is_closed(RenderWindowHandle handle);

// Vector3

//Vector3::operator !=
int vector3_notequals_vector3(coiVector3 lhs, coiVector3 rhs);

//Vector3::operator ==
int vector3_equals_vector3(coiVector3 lhs, coiVector3 rhs);

//Vector3::operator +
coiVector3 vector3_add_vector3(coiVector3 lhs, coiVector3 rhs);

//Vector3::operator +=
void vector3_update_add_vector3(coiVector3 lhs, coiVector3 rhs);

//Vector3::operator -
coiVector3 vector3_subtract_vector3(coiVector3 lhs, coiVector3 rhs);

//Vector3::operator -=
void vector3_update_subtract_vector3(coiVector3 lhs, coiVector3 rhs);

//Vector3::operator - 
coiVector3 vector3_negate(coiVector3 v3);

// Vector3::operator/ 
coiVector3 vector3_divide_vector3(coiVector3 lhs, coiVector3 rhs);

// Vector3::operator*
coiVector3 vector3_multiply_vector3(coiVector3 lhs, coiVector3 rhs);

// Vector3::isNaN
int vector3_is_nan(coiVector3 v3);

//Vector3::primaryAxis
coiVector3 vector3_primary_axis(coiVector3);

// Vector3::ZERO
coiVector3 vector3_ZERO();
coiVector3 vector3_UNIT_X();
coiVector3 vector3_UNIT_Y();
coiVector3 vector3_UNIT_Z();
coiVector3 vector3_NEGATIVE_UNIT_X();
coiVector3 vector3_NEGATIVE_UNIT_Y();
coiVector3 vector3_NEGATIVE_UNIT_Z();
coiVector3 vector3_UNIT_SCALE();
